--- a/index.html
+++ b/index.html
@@ -6,33 +6,12 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top navbar-primary">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Project1</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Jobs</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-    </nav>
+  
         <canvas id="myCanvas">
 
     </canvas>
@@ -43,14 +22,7 @@
                     <div class="col-md-5 no-padding">
                         <form>
                             <div class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Job Title or Keywords">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-md-2 no-padding">
-                        <form>
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Category">
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Company or keywords">
                             </div>
                         </form>
                     </div>
@@ -62,25 +34,14 @@
                         </form>
                     </div>
                     <div class="col-md-3 no-padding">
-                        <button type="button" class="btn btn-dark">Search Jobs</button>
+                        <button type="button" class="btn btn-dark">Search Company</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <nav class="navbar navbar-default navbar-secondary">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-         
-      <script>
+    <script>
     var mainCanvas = document.getElementById("myCanvas");
     var mainContext = mainCanvas.getContext('2d');
 
